--- a/styles/theme/about-neko.css
+++ b/styles/theme/about-neko.css
@@ -1,1 +1,92 @@
+.about-neko {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--dark-back-color);
+    margin-top: 35px;
+    margin-bottom: 32px;
+    max-width: 100%;
+    height: 917px;
+    border-radius: 40px;
+}
 
+.about-neko-subtitle {
+    justify-self: start;
+    margin-top: 50px;
+}
+.about-neko-title {
+    color: var(--white-color);     
+}
+.about-neko-text {
+    text-align: center;
+    line-height: 18px;
+    max-width: 80%;
+}
+.about-neko-button {
+    margin-bottom: 0px;
+}
+.about-neko-image-cat {
+    display: block;
+}
+
+@media (max-width: 1280px) {
+    .about-neko-button {
+        height: 55px;
+        width: 278px;
+    }
+    .about-neko-image-cat {            
+        width: 500px; 
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .about-neko-button {
+        height: 55px;
+        width: 278px;
+    }
+    .about-neko-image-cat { 
+        width: clamp(380px, 80%, 1000px);  
+        margin-bottom: 0px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .about-neko {      
+        display: grid;  
+        grid-template-columns: repeat(2,1fr);
+        justify-content: space-between;
+        grid-template-areas: 
+        "subtitle image-pink-cat"
+        "title image-pink-cat"
+        "text image-pink-cat"
+        "button image-pink-cat";
+        margin-top: 48px;
+        margin-bottom: 80px;
+        padding-left: 58px;
+        height: 537px;
+    }  
+        
+    .about-neko-subtitle {
+        grid-area: subtitle;
+        justify-self: start;
+        margin-top: 107px;
+    }
+    .about-neko-title {
+        grid-area: title;
+        color: var(--white-color);     
+    }
+    .about-neko-text {
+        grid-area: text;
+        max-width: 530px;
+    }
+    .about-neko-button {
+        grid-area: button;
+        margin-bottom: 60px;
+    }
+    .about-neko-image-cat {
+        grid-area: image-pink-cat;
+        
+    }
+}
